# COREVisionLib

./: .gitignore  CMakeLists.txt  COREVisionLib.h  README.md  filter_cpp.cpp  main.cpp
src/: CORECapture.cpp  CORECapture.h  CORETimer.cpp  CORETimer.h  main.cpp
